clusters/cluster/media/prowlarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  #strategy:
  #  type: Recreate
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
      - name: prowlarr
        image: linuxserver/prowlarr:1.28.2 # {"$imagepolicy": "flux-system:prowlarr"}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9696
        volumeMounts:
        - name: prowlarr-config
          mountPath: /config
      volumes:
      - name: prowlarr-config
        persistentVolumeClaim:
          claimName: prowlarr-config-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: default
  labels:
    app: prowlarr
spec:
  selector:
    app: prowlarr
  ports:
  - name: prowlarr
    port: 9696
    targetPort: 9696
  type: ClusterIP
