clusters/cluster/media/tallflix-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: default
  labels:
    app: sonarr
spec:
  selector:
    app: sonarr
  ports:
  - name: sonarr
    port: 8989
    targetPort: 8989
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: calibreweb
  namespace: default
  labels:
    app: calibreweb
spec:
  selector:
    app: calibreweb
  ports:
  - name: calibreweb
    port: 8083
    targetPort: 8083
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: default
  labels:
    app: radarr
spec:
  selector:
    app: radarr
  ports:
  - name: radarr
    port: 7878
    targetPort: 7878
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: readarr
  namespace: default
  labels:
    app: readarr
spec:
  selector:
    app: readarr
  ports:
  - name: readarr
    port: 8787
    targetPort: 8787
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: ombi
  namespace: default
  labels:
    app: ombi
spec:
  selector:
    app: ombi
  ports:
  - name: ombi
    port: 3579
    targetPort: 3579
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: default
  labels:
    app: tautulli
spec:
  selector:
    app: tautulli
  ports:
  - name: tautulli
    port: 8181
    targetPort: 8181
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: youtubedl
  namespace: default
  labels:
    app: youtubedl
spec:
  selector:
    app: youtubedl
  ports:
  - name: youtubedl
    port: 8081
    targetPort: 8081
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: default
  labels:
    app: sabnzbd
spec:
  selector:
    app: sabnzbd
  ports:
  - name: sabnzbd
    port: 8080
    targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: wyzebridge
  namespace: default
  labels:
    app: wyzebridge
spec:
  selector:
    app: wyzebridge
  ports:
  - name: wyzebridge-1935
    port: 1935
    targetPort: 1935
  - name: wyzebridge-8554
    port: 8554
    targetPort: 8554
  - name: wyzebridge-8888
    port: 8888
    targetPort: 8888
  - name: wyzebridge-5000
    port: 5000
    targetPort: 5000
  type: ClusterIP
