clusters/cluster/media/calibreweb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibreweb
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calibreweb
  #strategy:
  #  type: Recreate
  template:
    metadata:
      labels:
        app: calibreweb
    spec:
      containers:
      - name: calibreweb
        image: linuxserver/calibre-web:0.6.22 # {"$imagepolicy": "flux-system:calibre-web"}
        imagePullPolicy: Always
        ports:
        - name: "http-port"
          containerPort: 8083
          protocol: TCP
        volumeMounts:
        - name: calibreweb-config
          mountPath: /config
        - name: books-nfs
          mountPath: /books
      volumes:
      - name: calibreweb-config
        persistentVolumeClaim:
          claimName: calibreweb-config-pvc
      - name: books-nfs
        persistentVolumeClaim:
          claimName: books-pvc
          readOnly: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibreweb-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    #kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "calibreweb.tallflix.ca"
    secretName: tls-secret-calibre
  rules:
  - host: "calibreweb.tallflix.ca"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: calibreweb
            port:
              number: 8083
