clusters/cluster/media/mealie.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  #strategy:
  #  type: Recreate
  template:
    metadata:
      labels:
        app: mealie
    spec:
      containers:
      - name: mealie
        image: ghcr.io/mealie-recipes/mealie:v2.2.0 # {"$imagepolicy": "flux-system:mealie"}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: mealie-config
          mountPath: /app/data/
      volumes:
      - name: mealie-config
        persistentVolumeClaim:
          claimName: mealie-config-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: default
  labels:
    app: mealie
spec:
  selector:
    app: mealie
  ports:
  - name: mealie
    port: 9000
    targetPort: 9000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    #kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "mealie.tallflix.ca"
    secretName: tls-secret-mealie
  rules:
  - host: "mealie.tallflix.ca"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mealie
            port:
              number: 9000
