clusters/cluster/media/ombi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ombi
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ombi
  #strategy:
  #  type: Recreate
  template:
    metadata:
      labels:
        app: ombi
    spec:
      containers:
      - name: ombi
        image: linuxserver/ombi:4.47.1 # {"$imagepolicy": "flux-system:ombi"}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3579
        volumeMounts:
        - name: ombi-config
          mountPath: /config
      volumes:
      - name: ombi-config
        persistentVolumeClaim:
          claimName: ombi-config-pvc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ombi-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "tallflix.ca"
    - "www.tallflix.ca"
    secretName: tls-secret-ombi
  rules:
  - host: "www.tallflix.ca"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ombi
            port:
              number: 3579
