clusters/cluster/media/readarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readarr
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: readarr
  #strategy:
  #  type: Recreate
  template:
    metadata:
      labels:
        app: readarr
    spec:
      containers:
      - name: readarr
        image: linuxserver/readarr:develop
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8787
        volumeMounts:
        - name: readarr-config
          mountPath: /config
        - name: books-nfs
          mountPath: /books
        - name: readarr-downloads-complete
          mountPath: /downloads
      volumes:
      - name: readarr-config
        persistentVolumeClaim:
          claimName: readarr-config-pvc
      - name: books-nfs
        persistentVolumeClaim:
          claimName: books-pvc
      - name: readarr-downloads-complete
        persistentVolumeClaim:
          claimName: downloads-complete-pvc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: readarr-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    #kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "readarr.tallflix.ca"
    secretName: tls-secret-radarr
  rules:
  - host: "readarr.tallflix.ca"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: readarr
            port:
              number: 8787
